Use mysql instead of h2

--- a/jobs/spring-petclinic/templates/bpm.yml.erb
+++ b/jobs/spring-petclinic/templates/bpm.yml.erb
@@ -4,3 +4,4 @@ processes:
     args:
     - -jar
     - /var/vcap/packages/spring-petclinic/spring-petclinic.jar
+    - -Dspring.config.additional-location="/var/vcap/jobs/spring-petclinic/config/application.properties"
