--- a/jobs/spring-petclinic/templates/bpm.yml.erb
+++ b/jobs/spring-petclinic/templates/bpm.yml.erb
@@ -1,7 +1,9 @@
 processes:
   - name: spring-petclinic
-    executable: /var/vcap/packages/openjdk-8/jre/bin/java
+    executable: java
     args:
-    - -jar
-    - /var/vcap/packages/spring-petclinic/spring-petclinic.jar
-    - -Dspring.config.additional-location="/var/vcap/jobs/spring-petclinic/config/application.properties"
+      - -jar
+      - /var/vcap/packages/spring-petclinic/spring-petclinic.jar
+      - -Dspring.config.additional-location="/var/vcap/jobs/spring-petclinic/config/application.properties"
+    env:
+      PATH: /var/vcap/packages/openjdk-8/jre/bin:$PATH
