Allow webapp port configuration

--- a/jobs/spring-petclinic/templates/application.properties.erb
+++ b/jobs/spring-petclinic/templates/application.properties.erb
@@ -5,3 +5,5 @@ spring.datasource.username=<%= p('db.username') %>
 spring.datasource.password=<%= p('db.password') %>
 # SQL is written to be idempotent so this is safe
 spring.datasource.initialization-mode=always
+
+server.port=<%= p('port') %>
